update find player endpoint, player id aggregated like path param
